fixed contrast on button text - background ratio

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -38,12 +38,12 @@
     &--disabled {
         border: 1px solid #999999;
         background-color: #cccccc;
-        color: #666666;
+        color: #3e3e3e;
 
         &:hover {
             border: 1px solid #999999!important;
             background-color: #cccccc!important;
-            color: #666666!important;
+            color: #3e3e3e!important;
             cursor: not-allowed;
         }
     }
